# no-one-likes-parallel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: manual.yml
src/: common.rs  device_list.rs  help.rs  main.rs  menu.rs  serial.rs  terminal.rs
