[package]
name = "no-one-likes-parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
serialport = "4.3.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
